--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eject": "react-scripts eject",
     "fake-json": "json-server ./public/db.json -w  -p 3001"
   },
+  "proxy":"http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
